[tool.poetry]
name = "crewai-28"
version = "0.28.8"
description = "Framework for orchestrating collaborative, autonomous AI agents tackling complex tasks."
authors = ["Joao Moura <joao@crewai.com>"]
readme = "README.md"
packages = [{ include = "crewai", from = "src" }]
license = "MIT"  # or other appropriate license


[tool.poetry.urls]
Homepage = "https://crewai.com"
Documentation = "https://github.com/joaomdmoura/CrewAI/wiki/Index"
Repository = "https://github.com/joaomdmoura/crewai"

[tool.poetry.dependencies]
python 
streamlit 
pysqlite3-binary 
pydantic 
langchain 
openai 
langchain_groq
opentelemetry-api 
opentelemetry-sdk
opentelemetry-exporter-otlp-proto-http 
instructor "
regex 
crewai-tools 
click 
python-dotenv 
embedchain
appdirs 
decouple 

[tool.poetry.extras]
tools = ["crewai-tools"]

[tool.poetry.group.dev.dependencies]
isort 
pyright
autoflake 
pre-commit
mkdocs 
mkdocstrings 
mkdocstrings-python 
mkdocs-material
mkdocs-material-extensions  
pillow
cairosvg 

[tool.isort]
profile = "black"
known_first_party = ["crewai"]

[tool.poetry.group.test.dependencies]
pytest 
pytest-vcr 

[tool.poetry.scripts]
crewai = "crewai.cli.cli:crewai"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
